--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -6,7 +6,7 @@
             <%= link_to image_tag(listing.image.url), listing %>
             <div class="caption">
               <h3><%= listing.name %></h3>
-              <p><%= number_to_currency listing.price %></p>
+              <p><%= number_to_currency(listing.price) %></p>
               <%= link_to 'Show', listing, class: "btn btn-link" %>
               <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
               <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>
