--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -50,3 +50,9 @@ body {
 		margin: 0px;
 	}
 }
+
+.jumbotron{
+	background-image: url('jumbotron.jpg');
+	h1, h2{font-family: guardian-egypt, georgia, serif;}
+	color: #FF8C00;
+}
