--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,3 +1,8 @@
+<div class="jumbotron">
+  <h1 class="center">Handcrafted items form around the world.</h1>
+  <h2 class="center">Discover one-of-a-kind items</h2>
+</div>
+
 <div class="center">
   <div class="row">
     <% @listings.each do |listing| %>
