--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -52,7 +52,7 @@ body {
 }
 
 .jumbotron{
-	background-image: url('jumbotron.jpg');
+	background-image: url('https://www.dropbox.com/s/hgx9zl9upvki18p/jumbotron.jpg?raw=1');
 	h1, h2{font-family: guardian-egypt, georgia, serif;}
 	color: #FF8C00;
 }
