--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -21,6 +21,10 @@
         </div>
       <% end %>
 
+      <div id="stripe_error" class="alert alert-danger" style="display:none">      
+          <noscript>JavaScript is not enabled and is required for this form. First enable it in your web browser settings.</noscript>
+      </div>
+      
       <div class="form-group">
         <%= f.label :address %>
         <%= f.text_field :address, class: "form-control" %>
@@ -56,9 +60,8 @@
           </div>
           <div class="col-md-3">
             <%= select_year nil,{ start_year: Date.today.year, end_year: Date.today.year+10 }, { :name => nil, :'data-stripe' => "exp-year", class: "form-control" }  %>
-            </br> 
-          </div> 
-
+          </div>
+        </div>        
       </div>
 
       <div class="form-group">
